--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,11 +1,39 @@
 /* app/assets/css/main.css */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap");
 
 @import "tailwindcss";
 
+/* 2. SAU ĐÓ MỚI ĐẾN FONT-FACE */
+@font-face {
+  font-family: "MyWeddingFont";
+  src: url("/fonts/SVN-BonVoyage-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 3. CUỐI CÙNG LÀ CÁC CLASS CSS */
 .perspective-container {
   perspective: 1200px;
 }
 .preserve-3d {
   transform-style: preserve-3d;
+}
+
+.font-wedding-1 {
+  font-family: "MyWeddingFont", cursive;
+}
+
+.font-great-vibes {
+  font-family: "Great Vibes", cursive;
+}
+
+.font-cinzel {
+  font-family: "Cinzel", serif;
+}
+
+.font-serif {
+  font-family: "Cormorant Garamond", serif;
 }
